# jd-quiz-leptos

./: Cargo.toml  README.md  index.html  vercel.json
server/: index.ts
src/: components.rs  main.rs
src/components/: answers.rs  front.rs  quizbox.rs  routing.rs
src/pages/: home.rs
src/partials/: navbar.rs
